change text for start
version release 1.2.4

--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -57,7 +57,7 @@ msgid ""
 "Also, i will remind you about the pass in advance so that you provide the "
 "documents.\n"
 "\n"
-"🔍 New search - to find by SNILS\n"
+"🔍 New search - to find by SNILS (Specified when submitting the application)\n"
 "\n"
 "🗃️ Favorite - favorite pass list\n"
 msgstr ""
@@ -67,7 +67,7 @@ msgstr ""
 "Так же, я заранее напомню об окончании пропуска, что бы Вы своевременно "
 "подали документы.\n"
 "\n"
-"🔍 Новый поиск - позволит совершить поиск по СНИЛС\n"
+"🔍 Новый поиск - позволит совершить поиск по СНИЛС (Указанный при подаче заявления)\n"
 "\n"
 "🗃️ Избранное - избранный список пропусков\n"
 
